kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: marinepac123/lolec_front
        imagePullPolicy: Never
        # On ne lance pas directement la TUI, on laisse le pod prêt pour exec
        command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
